[tool.poetry]
name = "url-shortener-api"
version = "0.1.0"
description = "Url shortener API"
authors = ["Justyna Rafalska"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
djangorestframework = "^3.15.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.8"
pytest = "^8.2.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
